--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
         - #CONTACT
       -->
 
-      <!-- <article class="contact" data-page="contact">
+      <article class="contact" data-page="contact">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
@@ -1174,7 +1174,7 @@
 
         </section>
 
-      </article> -->
+      </article>
 
     </div>
 
