--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Rishab Pandey" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Pradnya Ingulkar" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Rishab Pandey">Rishab Pandey</h1>
+          <h1 class="name" title="Pradnya Ingulkar">Pradnya Ingulkar</h1>
 
           <p class="title">Web developer</p>
         </div>
